# lcsc-2019

./: .gitignore  .gitmodules  README.md
code/: exercises.org
code/week01/: rng.cpp
code/week02/: main.cpp  rng.hpp  week2
code/week03/: CMakeLists.txt  README.md
code/week04/: CMakeLists.txt  README.md
code/week04/example/: test_histogram.cpp  test_rng.cpp
code/week08/: README.md
code/week08/include/: constants.hpp
code/week1/: README.md  rng.cpp
code/week12/: range.cpp
code/week13/: CMakeLists.txt  README.md  range.cpp
code/week15/: CMakeLists.txt  README.md
code/week15/include/: ranges.hpp
code/week15/src/: test.cpp
code/week2/: README.md  rng.cpp
code/week3/: README.md
code/week3/include/: lcsc.hpp
code/week4/: CMakeLists.txt  README.md
code/week4/example/: print_rng.cpp
code/week4/include/: lcsc.hpp
code/week4/include/rng/: distribution.hpp  util.hpp
code/week6/: CMakeLists.txt  README.md
code/week6/example/: test_monte_carlo.cpp
code/week6/include/: lcsc.hpp
code/week8/: CMakeLists.txt  README.md
code/week8/example/: plot.cpp  table.cpp
code/week8/include/: report.hpp  timer.hpp
code/week8/scripts/: process_plot.py
code/week8/src/: report.cpp  timer.cpp
lectures/week01/: week1.org
lectures/week02/: beamerfontthememetropolis.sty  week2.org
lectures/week03/: beamercolorthememetropolis.sty
lectures/week07/: week7.org
lectures/week09/: week9.org
lectures/week1/: beamerinnerthememetropolis.sty  week1.org  week1.tex
lectures/week1/_minted-week1/: 069AFFED21431A3272CE5082D833202C978F24439D10F2E60558392BF5767A51.pygtex  23078230EB95A0E4808FF9FF58EF9942978F24439D10F2E60558392BF5767A51.pygtex  3889B88BD37207FB688E9C5D7B1B70A5978F24439D10F2E60558392BF5767A51.pygtex  5C11FF1DEF313F2A87EABF3A30F130AD978F24439D10F2E60558392BF5767A51.pygtex  801886212DAA850561313FEA1FF7CF97978F24439D10F2E60558392BF5767A51.pygtex  A6E5DCC3C5B7F52D197E59117C49DDF7978F24439D10F2E60558392BF5767A51.pygtex  A8FAD5449AC6AC9FB50BC2B60A6E410C978F24439D10F2E60558392BF5767A51.pygtex  BE12035938C3F22066A4797472DD53EC978F24439D10F2E60558392BF5767A51.pygtex  CB1032D32F15EF090785F9F0B5719ADB978F24439D10F2E60558392BF5767A51.pygtex  D51B77B97A111D563C9049ACAC85A852978F24439D10F2E60558392BF5767A51.pygtex  D7307993A89B019E5049D1B79DFCC48B978F24439D10F2E60558392BF5767A51.pygtex  E6583AFB979308E63EB0379CEB32AE78978F24439D10F2E60558392BF5767A51.pygtex  FCEFE1D08A091D59CED7D3D91CF42CD7978F24439D10F2E60558392BF5767A51.pygtex
lectures/week1/auto/: week1.el
lectures/week12/: week12.org
lectures/week13/: week13.org
lectures/week15/: week15.org
lectures/week2/: week2.tex
lectures/week2/_minted-week2/: 0551787C0163A835494BA2ED956D7070250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  06A7AA1342097BFFBF5353BF728DA225250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  0FA5DFD4E083A74B0434520068C101D6250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  4943698890CCAA034A5665FDA6125208250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  5544A6D64C147B2DBD1C782D1A5F92CC250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  6F57877FD911885A22972A64324E6B38250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  7CF91820F8CBF9759D707A9CEA8FB029250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  893CAD690D07CB5AE2408939375BAC50250BCB000C44BB6E7D16ABA65E63A5C8.pygtex  (+6 more)
lectures/week3/: week3.org  week3.tex
lectures/week4/: beamerthememetropolis.sty  week4.org  week4.tex
lectures/week6/: week6.org  week6.tex
lectures/week8/: header.tex  week8.org
lectures/week9/: beamerouterthememetropolis.sty  week9.org
(+42 files in other folders)
